# FinanceManager

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py  copy.sh  main.py  manage_services.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
DBContainers/: docker-compose.yml
Services/APIGateway/: CMakeLists.txt
Services/APIGateway/include/: GatewayController.h  JwtAuthFilter.h
Services/APIGateway/src/: GatewayController.cpp  JwtAuthFilter.cpp  main.cpp
Services/AuthAPI/: CMakeLists.txt
Services/AuthAPI/include/: AuthController.h  FirebaseAuth.h
Services/AuthAPI/src/: AuthController.cpp  FirebaseAuth.cpp
Services/DBCassandra/include/: CassandraClient.h
Services/DBCassandra/src/: CassClient.cpp
Services/DBManager/include/: DBManager.h
Services/DBManager/src/: DBManager.cpp
Services/DBRedis/include/: RedisClient.h
Services/DBRedis/src/: RedisClient.cpp
Services/Expenses/include/: ExpenseDbClient.h  JwtValidator.h
Services/Expenses/src/: main.cpp
Services/NotificationService/: CMakeLists.txt
Services/NotificationService/include/: NotificationService.h
Services/Reports/: CMakeLists.txt
Services/Reports/include/: chart.hpp
Services/Reports/src/: chart.cpp
Services/Search/: CMakeLists.txt
Services/UI/: CMakeLists.txt
Services/UI/include/: Authentication.h  FinanceManager.h  FirebaseAuth.h  FirebaseAuthDrogon.h  FirebaseAuthQt.h  RedisHandler.h
Services/UI/qml/: BudgetManager.qml  ContextMenu.qml  CustomMenuItem.qml  DCSStyles.qml  FileDialog.qml  IncomeExpenseTracker.qml  LoginScreen.qml  MainScreen.qml  MessageDialog.qml  Notification.qml  NotificationDialog.qml  RegisterScreen.qml  Reports.qml  Settings.qml  StatusBar.qml  main.qml  resources.qrc  showTokenRenewalNotification.qml
Services/UI/src/: Authentication.cpp  FinanceManager.cpp  FirebaseAuth.cpp  FirebaseAuthDrogon.cpp  FirebaseAuthQt.cpp  RedisHandler.cpp  dummy.cpp  main-chart.cpp  main.cpp  main3.cpp
Services/UI/tests/: test_main.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: EnvReader.h  Logger.h  LoggerQuill.h
Utils/src/: EnvReader.cpp  LoggerQuill.cpp
linuxconfig/: .p10k.zsh  clang-debug-profile
scripts/: add_file_headers.sh  check_file_headers.sh
